syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service ApplicantResume {
	rpc CreateApplicantResume(ApplicantResumeReply) returns (google.protobuf.Empty);
	rpc DeleteApplicantResume(ApplicantResumeReply) returns (google.protobuf.Empty);
	rpc ReadApplicantResume(ApplicantResumeRequest) returns (ApplicantResumeReply);
	rpc UpdateApplicantResume(ApplicantResumeReply) returns (google.protobuf.Empty);
}

message ApplicantResumeRequest {
	string id = 1;
}

message ApplicantResumeReply {
	string id = 1;
	string applicant = 2;
	string resume = 3;
	google.protobuf.Timestamp last_updated = 4;
}